新增权限控制和初始化sql